--- a/Advertising-All.conf
+++ b/Advertising-All.conf
@@ -114,4 +114,4 @@ URL-REGEX,^https?:\/\/.+\.amemv\.com\/api\/ad
 (^https?:\/\/.+\.googlevideo\.com\/.+)(&ctier=[A-Z])(&.+) $1$3 302
 
 [MITM]
-hostname = graph.nhaccuatui.com, spclient.wg.spotify.com, *.googlevideo.com, s.youtube.com, www.youtube.com, www.googleapis.com, youtubei.googleapis.com, graph.facebook.com
+hostname = graph.nhaccuatui.com, spclient.wg.spotify.com, *.googlevideo.com, s.youtube.com, www.youtube.com, www.googleapis.com, youtubei.googleapis.com
