--- a/Test.conf
+++ b/Test.conf
@@ -3,7 +3,7 @@
 
 hostname = *.googlevideo.com,www.youtube.com,s.youtube.com
 
-(^https?:\/\/(?!redirector)[\w-]+\.googlevideo\.com\/((?!dclk_video_ads).)+)(ctier=L)(&.+) $1$3 302
+(^https?:\/\/(?!redirector)[\w-]+\.googlevideo\.com\/((?!dclk_video_ads).)+)(ctier=L)(&.+) $1$3 url 302
 ^https?:\/\/[\w-]+\.googlevideo\.com\/((?!(dclk_video_ads|videoplayback)).)+&(oad|ctier) url reject
 
 ^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads url reject
